# qwen3-asr-ime

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-20-qwen3-asr-ime.md  2026-06-24-non-streaming-asr.md
docs/superpowers/specs/: 2026-06-20-qwen3-asr-ime-design.md  2026-06-24-non-streaming-asr-design.md
src/qwen3_asr_ime/: __init__.py
src/qwen3_asr_ime/common/: __init__.py  config.py  logger.py  protocol.py
src/qwen3_asr_ime/daemon/: __init__.py  asr_client.py  backend_manager.py  hotkey.py  process_manager.py  recorder.py  service.py
src/qwen3_asr_ime/ibus/: engine.py  factory.py  main.py
systemd/: qwen3-asr-ime.service  qwen3-asr-server.service
tests/: test_asr_client.py  test_asr_http_client.py  test_backend_manager.py  test_config_watcher.py  test_e2e.py  test_hotkey.py  test_integration.py  test_protocol.py  test_recorder.py  test_streaming_asr.py
tools/: asr_server.py  test_hotkey.py
