[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3-asr-ime"
version = "0.1.0"
description = "Qwen3-ASR based Linux voice input method for IBus"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Assistant"}]
urls = {Homepage = "https://github.com/example/qwen3-asr-ime"}
requires-python = ">=3.10"
dependencies = [
    "sounddevice>=0.5",
    "requests>=2.31",
    "evdev>=1.6",
    "pynput>=1.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ibus = ["pygobject>=3.42"]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "responses>=0.25",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
