[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3-asr-ime"
version = "0.1.0"
description = "Qwen3-ASR based Linux voice input tool"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Assistant"}]
urls = {Homepage = "https://github.com/example/qwen3-asr-ime"}
requires-python = ">=3.10"
dependencies = [
    "sounddevice>=0.5",
    "pynput>=1.7",
    "pyyaml>=6.0",
    "websockets>=12.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
vllm = ["vllm>=0.14.0"]
transformers = ["transformers>=4.45", "accelerate>=0.34"]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
markers = [
    "e2e: marks tests as end-to-end (skipped by default, run with `-m e2e`)",
]
addopts = "-m 'not e2e'"
